--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -42,4 +42,5 @@
     <string name="classes_summary">Classes Summary</string>
     <string name="taught_classes">Taught Classes</string>
     <string name="pending_classes">Pending Classes</string>
+    <string name="view_on_github">View on GitHub</string>
 </resources>
