--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="classes_summary">Resumo de Aulas</string>
     <string name="taught_classes">Aulas Realizadas</string>
     <string name="pending_classes">Aulas Pendentes</string>
+    <string name="view_on_github">Ver no GitHub</string>
 </resources>
